feat(config): Implemented a new config system

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 jdaVersion=5.4.0
 lombokVersion=1.18.38
 gsonVersion=2.13.0
+snakeYamlVersion=2.4
 telegramVersion=8.3.0
 
 projectName=furia-challenge
