--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation("org.telegram:telegrambots-meta:${project.telegramVersion}")
     implementation("org.telegram:telegrambots-longpolling:${project.telegramVersion}")
     implementation ("com.google.code.gson:gson:${project.gsonVersion}")
+    implementation("org.yaml:snakeyaml:${project.snakeYamlVersion}")
 
     // For some reason gradle don't like lombok version in gradle.properties TODO: fix this (Low priority)
     compileOnly("org.projectlombok:lombok:1.18.38")
