--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ lombokVersion=1.18.38
 gsonVersion=2.13.0
 snakeYamlVersion=2.4
 telegramVersion=8.3.0
+logbackVersion=1.5.18
 
 projectName=furia-challenge
 group=gg.furia.challenge
